@@ -19,7 +19,11 @@ list may help describe what changes may be necessary in your code.
 
 Changes for 0.98.x
 ==================
-* Removed numerix package.
+* Added new :func:`matplotlib.pyplot.fignum_exists` and
+  :func:`matplotlib.pyplot.get_fignums`; they merely expose
+  information that had been hidden in :mod:`matplotlib._pylab_helpers`.
+
+* Deprecated numerix package.
 
 * Added new :func:`matplotlib.image.imsave` and exposed it to the
   :mod:`matplotlib.pyplot` interface.
@@ -46,7 +50,7 @@ Changes for 0.98.x
         ================   ================
 
 
-* Removed the configobj and experiemtnal traits rc support
+* Removed the configobj and experimental traits rc support
 
 * Modified :func:`matplotlib.mlab.psd`, :func:`matplotlib.mlab.csd`,
   :func:`matplotlib.mlab.cohere`, and :func:`matplotlib.mlab.specgram`
